a lot of changes, here is what have been changed: 1- finished the projects section, but without responsive design. 2- translated the entire section. 3- translated cv section. 4- added footer to all section.

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -64,7 +64,7 @@
             "pcontent": ".واجهة موقع مستنسخة من موقع شركة ستاربكس للقهوة",
             "github": "جيت هاب",
             "livedemo": "عرض مباشر",
-            "githubtitle": "عرض المشروع على جيت هاب",
+            "githubtitle": "عرض على جيت هاب",
             "livedemotitle": "عرض مباشر"
         },
         "box2": {
