--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -64,9 +64,9 @@
             "title": "Компания Mint Mind Coffee",
             "pcontent": "Компания Mint Mind Coffee - это клонированный веб-сайт компании Starbucks.",
             "github": "Github",
-            "livedemo": "Живая демонстрация",
+            "livedemo": "Живая демо",
             "githubtitle": "Посмотреть на Github",
-            "livedemotitle": "Посмотреть live демо"
+            "livedemotitle": "Посмотреть живая демо"
         },
     
         "box2": {
