--- a/src/languages/locale/english/cv.json
+++ b/src/languages/locale/english/cv.json
@@ -1,11 +1,7 @@
 {
-    "home": {
-        "greeting": "Hello, It's me",
-        "myname": "Mostafa Saleh",
-        "andima": "And I'm a",
-        "spancontent1": "Software Engineer",
-        "spancontent2": "Frontend Develper",
-        "spancontent3": "React Developer",
-        "pcontent": "I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS."
+    "cv": {
+        "my": "My",
+        "download": "Download",
+        "resume": "Resume"
     }
 }
