--- a/src/languages/locale/russian/cv.json
+++ b/src/languages/locale/russian/cv.json
@@ -1,11 +1,7 @@
 {
-    "home": {
-        "greeting": "Здравствуйте! Это я",
-        "myname": "Мустафа Салех",
-        "andima": "И я",
-        "spancontent1": "Инженер-программист",
-        "spancontent2": "Фронтенд-разработчик",
-        "spancontent3": "Реакт-разработчик",
-        "pcontent": "Я разработчик программного обеспечения, увлеченный созданием технологий, которые помогут людям подняться на новый уровень и помочь новым разработчикам найти правильный путь. Некоторые технологии, с которыми мне нравится работать, включают Javascript и ReactJS."
+    "cv": {
+        "my": "Моё",
+        "download": "Скачать",
+        "resume": "Резюме"
     }
 }
