adding new project to the projects page.

--- a/src/languages/locale/arabic/projects.json
+++ b/src/languages/locale/arabic/projects.json
@@ -5,7 +5,7 @@
 
         "project1": {
             "title": "شركة مينت مايند للقهوة",
-            "pcontent": ".واجهة موقع مستنسخة من موقع شركة ستاربكس للقهوة",
+            "pcontent": "كانت هذه أول صفحة ويب كاملة اقوم بتطوير واجهتها، شركة مينت مايند للقهوة هي صفحة ويب مستنسخة من صفحة شركة ستاربكس ولكن باللغة الروسية. لماذا الروسية تحديداً؟ حسناً، لأنني في ذلك الوقت كنت قد بدأت للتو بتعلم اللغة الروسية.",
             "github": "جيت هاب",
             "livedemo": "عرض مباشر",
             "githubtitle": "عرض المشروع على جيت هاب",
