--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -23,9 +23,9 @@
         "greeting": "Hello, It's me",
         "myname": "Mostafa Saleh",
         "andima": "And I'm a",
-        "spancontent1": "Software Engineer",
-        "spancontent2": "Frontend Develper",
-        "spancontent3": "React Developer",
+        "spancontent1": "Frontend and React Developer",
+        "spancontent2": "Computer and Control Engineering Fresh Graduate",
+        "spancontent3": "Currently preparing for a Cloud Engineering and Network role",
         "pcontent": "I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.",
         "facebook": "Facebook",
         "instagram": "Instagram",
