adding Telecom Egypt internship commit

--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -35,6 +35,7 @@
         "email": "Email",
         "telegram": "Telegram",
         "phone": "Phone",
+        "duolingo": "Duolingo",
         "downloadcv": "Download CV"
     },
 
