fixing translation problems in home section and blog posts

--- a/src/pages/blog/main/articlepage/articlescontent/a2/locale/ar_a2.json
+++ b/src/pages/blog/main/articlepage/articlescontent/a2/locale/ar_a2.json
@@ -1,91 +1,104 @@
-[
-  {
-    "a1_articleTitle": "",
-    "a1_date": "",
-    "a1_p1": "",
-    "a1_p2": "",
-    "a1_p3": "",
-    "a1_p4": "",
-    "a1_p5": "",
-    "a1_p6": "",
-    "a1_p7": "",
-    "a1_p8": "",
-    "a1_p9": "",
-    "a1_p10": "",
-    "a1_p11": "",
-    "a1_p12": "",
-    "a1_p13": "",
-    "a1_p14": "",
-    "a1_p15": "",
-    "a1_p16": "",
-    "a1_p17": "",
-    "a1_p18": "",
-    "a1_p19": "",
-    "a1_p20": "",
-    "a1_p21": "",
-    "a1_p22": "",
-    "a1_p23": "",
-    "a1_p24": "",
-    "a1_p25": "",
-    "a1_p26": "",
-    "a1_p27": "",
-    "a1_p28": "",
-    "a1_p29": "",
-    "a1_p30": "",
-    "a1_p31": "",
-    "a1_p32": "",
-    "a1_p33": "",
-    "a1_p34": "",
-    "a1_p35": "",
-    "a1_p36": "",
-    "a1_p37": "",
-    "a1_p38": "",
-    "a1_p39": "",
-    "a1_p40": "",
-    "a1_p41": "",
-    "a1_p42": "",
-    "a1_p43": "",
-    "a1_p44": "",
-    "a1_p45": "",
-    "a1_p46": "",
-    "a1_p47": "",
-    "a1_p48": "",
-    "a1_p49": "",
-    "a1_p50": "",
-    "a1_p51": "",
-    "a1_p52": "",
-    "a1_p53": "",
-    "a1_p54": "",
-    "a1_p55": "",
-    "a1_p56": "",
-    "a1_p57": "",
-    "a1_p58": "",
-    "a1_p59": "",
-    "a1_p60": "",
-    "a1_p61": "",
-    "a1_p62": "",
-    "a1_p63": "",
-    "a1_p64": "",
-    "a1_p65": "",
-    "a1_p66": "",
-    "a1_p67": "",
-    "a1_p68": "",
-    "a1_p69": "",
-    "a1_p70": "",
-    "a1_p71": "",
-    "a1_p72": "",
-    "a1_p73": "",
-    "a1_p74": "",
-    "a1_p75": "",
-    "a1_p76": "",
-    "a1_p77": "",
-    "a1_p78": "",
-    "a1_p79": "",
-    "a1_p80": "",
-    "a1_p81": "",
-    "a1_p82": "",
-    "a1_p83": "",
-    "a1_p84": "",
-    "a1_p85": ""
-  }
-]
+{
+  "articleTitle": "مقالة",
+  "date": "يوم شهر سنة",
+  "p1": "لوريم إيبسوم دولور سيت أميت، كونسيكتيتور أديبيسينغ إيليت. فولوبتاته سوسيبيت كولبا توتام نيسي أيوس تيمبوريبوس نوبيس إرور إت؟ أبيريام بارياتور، كوود إبسام تيمبوريبوس مايوريس بيرفيرينديس إياكي. لابوريوسام إيبسا دولوري نوستروم سونت ديكتا أوفيسييس إيوم، فيل إيست سابينتي ديسيريونت نيسيتاتيبوس فولوبتاتيم. لابوريوسام نيسكيونت أد نيهيل إيرور كويسكوام نام إت ريسينديس، يوستو فيرو ديكتا دوكيموس سولوتا ريروم سابيينتي أوت سينت تيمبوريبوس كويو بلاتسيت نولا إكسيرسيتاتيونيم بوررو دولوريمكوي أومنيس فيريتاتيس سايبي. فيريتاتيس سوسيبيت موليستياس ماغني أوت! مايوريس أومنيس ريبيليندوس، ديستينكتيو بلاتسيت دولوريمكوي بوررو، كويبسدام توتام ڤينيام، مينوس بلانديتييس نيمو آتكوي إكسيبتوري! كواس دولوريس إينيم سينت إيسسي، كوم تينيتور آتكوي كوئي فولوبتاتيس إيوس فاكيري مينيما أوتيم إكسيرسيتاتيونيم إيليغندي أوبتيو نيكوي آب! أليكوام إبسوم ديستينكتيو، نيكوي تيمبورا ڤيل كوئيبسدام ريروم ديگنيسيموس إيبسا أرشيكتو إيوس ديبيتيس كوئ دولوريمكوي آركيتيكتو إيوس ديبيتيس كوئ دولوريمكوي آنيمي ديليكتوس، هاروم فاسيليس ريبيليندوس، ماغنام آت سيميليكوي. ماغني آلياس فاسيليس، تينيتور أكيوساموس أوفيسييس كوود مائوريس آميت ناتوس بياتاي كوئ فاكيري، إينيم ديگنيسيموس كوم موليستياي دولورم إكسبليكابو فوگات. أسوميندا آوت، آميت كويسكوام فوگيت آت بوسيموس بوررو، فولوبتاتيبوس إيا تيمبوريبوس برايزينتيوم سيد إينفنتوري آبيريام. كونسيكتيتور، آوتيم ماغنام. إكسيرسيتاتيونيم يوستو، كونسيكونتور فوگيات دولوري أوبكيكاتي ديلينيتي دولوريبوس، فوگيت إكسبليكابو تينيتور، موليتيا لابوريوسام سوسيبيت كوئ فولوبتاتيبوس كوئ دولوريم. إيت كوئ إيا، إيمبيديت إكسيپتوري إيبسام موليستياس فولوپتاتي آلياس راتيوني إنفنتوري إنكيديونت أومنيس كويبوسدام، أدوس ماغنام. بياتاي كواس بارياتور تيمپورا آوتيم سيد كوئ، كوي أليكوام أولام أسپيرناتور ريپوم تيمپوريبوس كوئ فيرو، فاسيري كوئ، ڤيتاي أوديو إيوس ريپيلات ديسيرونت أوللام سينت نون إبسوم إيوم إد، آت ماكسيم! آميت بياتاي نيسيسيتاتيبوس سيد، إيلوم ريبريهينديت فاكيري سائپي كوئد تينيتور كوئس نيهيل إيويم ماغني دولوروم ديسيرونت آپيريام إكس! فوگيات موليستياي، آ تيمپوريبوس، آت إيوس نولا نيسكيونت نيسي كومكوي، أكيوسانتيوم ديسيرونت تينيتور كوئس كومودي فولوپتاتيم ديبيتيس سيت! دولوريس، إيد مينيما كوئ كويس أكيوسانتيوم إيوس ديگنيسيموس هاروم، فولوپتاتي موليستياس إيا ليبيرو بروفيدينت ڤيرو إينيم إليگيندي ديسيرونت أميت مودي إنكيديونت سوسيپيت راتيوني إيوس، أوديت إيستي. أليكوام، يوستو ريبريهينديت. كوي كوئ كومكوي راتيوني آب. كولبا ڤينيام، پوررو نوبيس ڤيل پارياتور يوري كوئسكوام لاودانتيوم أبتيو آ ڤولوپتاتيس موليستياس ڤولوپتاتوم آوتيم أوتيم أوفيسييس إكوئ نيكوي أفيكي تيمبوريبوس بيتريوم ڤولوپتاتيم بيتريبي ڤولوپتاتوم بيتري ريپلات دولور أوپتيو نونكام آككوسانتيوم ديسيرونت كوياشدام كومودي دولوري ڤولوپتاتيم ديبيتيس سيت! دولوريس، إيد مينيما كوئ كوئس آكيوسانتيوم إيوس ديگنيسيموس هاروم، فولوپتاتي موليستياس إيا ليبيرو پروڤيدينت ڤيرو إينيم إليگيندي ديسيرونت آميت مودي إنكيديونت سوسيپيت راتيوني إيليام، آوديوم ماغنام إبسا ماغني دولوريبوس موليتيا ريكوساندياي ڤولوپتاتيم پيرفيرينديس ديگنيسيموس موليستياس ديستينكتيو كوپيديتاتي إيللو كوئ، أوديت آميت لاودانتيوم. موليتيا إسسي ڤولوپتاتوم آركيتيكتو، كواسي إيستي إياروم ريپيليندوس، أوفيسييس سولوتا آليكويد پيرفيرينديس إيونييت، كونسيكونتور إيليگيندي. أسپيرناتور سيد إست كوئ آسكيوي فيرو، فاسيري كوئ، ڤيتاي أوديو إيوس ريپيلات ديسيرونت أوللام سينت نون إبسوم إيوم، إد ماكسيم! آميت بياتاي نيسيسيتاتيبوس توتام ڤولوپتاتوم أبكائيت، إيت كوئيديم آبيريام ماغني دولوريبوس موليتيا ريكوساندياي ڤولوپتاتيم پيرفيرينديس ديگنيسيموس موليستياس ديستينكتيو كوپيديتاتي آيللو كوئ، أوديت آميت لاودانتيوم. موليتيا إسسي ڤولوپتاتوم آركيتيكتو، كواسي إيستي نيكوي، كوئديم آككوسانتيوم نيكوي أوفيسييس كونسيكواتور كومودي دولوري پيرفيرينديس ڤيولوپتاتوم دولور آپتيو ديسيرونت آيا آتكوي ",
+  "i1": {
+    "title": "",
+    "alt": "",
+    "description": ""
+  },
+  "h3_1": "",
+  "h2_1": "",
+  "h1_1": "",
+  "h4_1": "",
+  "ol1": "",
+  "ul1": "",
+  "ulx_1": "",
+  "olx_1": "",
+
+  
+  "p2": "",
+  "p3": "",
+  "p4": "",
+  "p5": "",
+  "p6": "",
+  "p7": "",
+  "p8": "",
+  "p9": "",
+  "p10": "",
+  "p11": "",
+  "p12": "",
+  "p13": "",
+  "p14": "",
+  "p15": "",
+  "p16": "",
+  "p17": "",
+  "p18": "",
+  "p19": "",
+  "p20": "",
+  "p21": "",
+  "p22": "",
+  "p23": "",
+  "p24": "",
+  "p25": "",
+  "p26": "",
+  "p27": "",
+  "p28": "",
+  "p29": "",
+  "p30": "",
+  "p31": "",
+  "p32": "",
+  "p33": "",
+  "p34": "",
+  "p35": "",
+  "p36": "",
+  "p37": "",
+  "p38": "",
+  "p39": "",
+  "p40": "",
+  "p41": "",
+  "p42": "",
+  "p43": "",
+  "p44": "",
+  "p45": "",
+  "p46": "",
+  "p47": "",
+  "p48": "",
+  "p49": "",
+  "p50": "",
+  "p51": "",
+  "p52": "",
+  "p53": "",
+  "p54": "",
+  "p55": "",
+  "p56": "",
+  "p57": "",
+  "p58": "",
+  "p59": "",
+  "p60": "",
+  "p61": "",
+  "p62": "",
+  "p63": "",
+  "p64": "",
+  "p65": "",
+  "p66": "",
+  "p67": "",
+  "p68": "",
+  "p69": "",
+  "p70": "",
+  "p71": "",
+  "p72": "",
+  "p73": "",
+  "p74": "",
+  "p75": "",
+  "p76": "",
+  "p77": "",
+  "p78": "",
+  "p79": "",
+  "p80": "",
+  "p81": "",
+  "p82": "",
+  "p83": "",
+  "p84": "",
+  "p85": ""
+}
