--- a/src/pages/blog/main/articlepage/articlescontent/a2/locale/de_a2.json
+++ b/src/pages/blog/main/articlepage/articlescontent/a2/locale/de_a2.json
@@ -1,91 +1,104 @@
-[
-  {
-    "a1_articleTitle": "",
-    "a1_date": "",
-    "a1_p1": "",
-    "a1_p2": "",
-    "a1_p3": "",
-    "a1_p4": "",
-    "a1_p5": "",
-    "a1_p6": "",
-    "a1_p7": "",
-    "a1_p8": "",
-    "a1_p9": "",
-    "a1_p10": "",
-    "a1_p11": "",
-    "a1_p12": "",
-    "a1_p13": "",
-    "a1_p14": "",
-    "a1_p15": "",
-    "a1_p16": "",
-    "a1_p17": "",
-    "a1_p18": "",
-    "a1_p19": "",
-    "a1_p20": "",
-    "a1_p21": "",
-    "a1_p22": "",
-    "a1_p23": "",
-    "a1_p24": "",
-    "a1_p25": "",
-    "a1_p26": "",
-    "a1_p27": "",
-    "a1_p28": "",
-    "a1_p29": "",
-    "a1_p30": "",
-    "a1_p31": "",
-    "a1_p32": "",
-    "a1_p33": "",
-    "a1_p34": "",
-    "a1_p35": "",
-    "a1_p36": "",
-    "a1_p37": "",
-    "a1_p38": "",
-    "a1_p39": "",
-    "a1_p40": "",
-    "a1_p41": "",
-    "a1_p42": "",
-    "a1_p43": "",
-    "a1_p44": "",
-    "a1_p45": "",
-    "a1_p46": "",
-    "a1_p47": "",
-    "a1_p48": "",
-    "a1_p49": "",
-    "a1_p50": "",
-    "a1_p51": "",
-    "a1_p52": "",
-    "a1_p53": "",
-    "a1_p54": "",
-    "a1_p55": "",
-    "a1_p56": "",
-    "a1_p57": "",
-    "a1_p58": "",
-    "a1_p59": "",
-    "a1_p60": "",
-    "a1_p61": "",
-    "a1_p62": "",
-    "a1_p63": "",
-    "a1_p64": "",
-    "a1_p65": "",
-    "a1_p66": "",
-    "a1_p67": "",
-    "a1_p68": "",
-    "a1_p69": "",
-    "a1_p70": "",
-    "a1_p71": "",
-    "a1_p72": "",
-    "a1_p73": "",
-    "a1_p74": "",
-    "a1_p75": "",
-    "a1_p76": "",
-    "a1_p77": "",
-    "a1_p78": "",
-    "a1_p79": "",
-    "a1_p80": "",
-    "a1_p81": "",
-    "a1_p82": "",
-    "a1_p83": "",
-    "a1_p84": "",
-    "a1_p85": ""
-  }
-]
+{
+  "articleTitle": "Article",
+  "date": "dd Mon YYYY",
+  "p1": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate suscipit culpa totam nisi eius temporibus nobis error et? Aperiam pariatur, quod ipsam temporibus maiores perferendis eaque? Laboriosam ipsa dolore nostrum sunt dicta officiis eum, vel est sapiente deserunt necessitatibus voluptatem. Laboriosam nesciunt ad nihil error quisquam nam et reiciendis, iusto vero dicta ducimus soluta rerum sapiente ut sint temporibus quo placeat nulla exercitationem porro doloremque omnis veritatis saepe? Veritatis suscipit molestias magni aut! Maiores omnis repellendus, distinctio placeat doloremque porro, quibusdam totam veniam, minus blanditiis nemo atque excepturi! Quas dolores enim sint esse, cum tenetur atque quo voluptates eos facere minima autem exercitationem eligendi optio neque ab! Aliquam ipsum distinctio, neque tempora vel quibusdam rerum dignissimos ipsa architecto eius debitis quo doloremque animi delectus, harum facilis repellendus, magnam at similique. Magni alias facilis, tenetur accusamus officiis quod maiores amet natus beatae quo facere, enim dignissimos cum molestiae dolorem explicabo fuga velit fugit. Assumenda aut, amet quisquam fugit at possimus porro, voluptatibus ea temporibus praesentium sed inventore aperiam. Consectetur, autem magnam. Exercitationem iusto, consequuntur fugiat dolore obcaecati deleniti doloribus, fugit explicabo tenetur, mollitia laboriosam suscipit qui voluptatibus quis dolorem. Et quia ea, impedit excepturi ipsam molestias voluptate alias ratione inventore incidunt omnis quibusdam, odio itaque sequi. Veniam, cumque. Officiis sapiente incidunt error quo ipsa ut quasi modi accusantium, ducimus pariatur ratione numquam temporibus placeat itaque? Beatae quas pariatur tempora autem sed quis, quam voluptatem, adipisci, enim reiciendis possimus aut nihil iste eveniet veritatis ducimus consequuntur culpa laudantium incidunt maxime rem! Natus dolorum necessitatibus totam voluptatum obcaecati, et quidem aperiam magni doloribus mollitia recusandae voluptate fugiat voluptatem perferendis dignissimos molestias distinctio cupiditate illo quod, odit amet laudantium. Ullam excepturi voluptatum architecto, quasi iste earum repellendus, officiis soluta aliquid perferendis eveniet, consequuntur eligendi. Aspernatur sed est quasi vero, facere quae, vitae odio eius repellat deserunt ullam sint non ipsum eum id, et maxime! Amet beatae necessitatibus sed, illum reprehenderit facere saepe quod tenetur quis nihil ullam quidem magni dolorum deserunt aperiam ex! Fugiat molestiae, a temporibus, et eius nulla nesciunt nisi cumque, accusantium deserunt tenetur quas commodi voluptatem debitis sit! Dolores, id minima quae quis accusantium illo eius dignissimos harum, voluptate molestias ea libero provident vero enim eligendi deserunt amet modi incidunt suscipit ratione ullam, odit iste. Aliquam, iusto reprehenderit. Qui quo cumque ratione ab. Culpa veniam, porro nobis vel pariatur iure quisquam laudantium optio a voluptates molestiae voluptatum autem officia unde iste omnis placeat qui natus fuga! Nostrum atque recusandae quasi, voluptates, architecto neque officiis consequatur commodi dolor optio deserunt dolorem. Mollitia esse veniam quos aut sit, commodi ea dicta possimus perspiciatis debitis omnis quisquam qui suscipit officiis praesentium distinctio neque nisi modi quam impedit magni! Aspernatur nihil magni quo iure sapiente cupiditate esse sed recusandae fugit. Commodi cum odit optio ipsum aliquid repudiandae culpa debitis pariatur facere, aliquam ex provident, quibusdam iusto laudantium fugit libero eaque. Voluptas doloremque tempora accusamus consectetur asperiores adipisci harum inventore delectus eveniet, reiciendis placeat illum facilis iusto quasi. Fuga, magnam. Itaque laudantium vero tempora quod ipsam natus, aliquid ullam aspernatur laboriosam inventore molestias hic doloribus rerum expedita repellat delectus soluta magni. Libero est nulla rem quidem exercitationem quaerat dolores, pariatur unde voluptatem nesciunt suscipit vel, nihil deserunt! Exercitationem perspiciatis incidunt consectetur molestiae libero facere maxime ducimus ipsa, nisi numquam unde ipsum similique aliquid repellat modi voluptatem animi atque quos quia fugiat omnis? Enim architecto suscipit eaque officiis consectetur, esse recusandae, necessitatibus magnam ut fuga optio deserunt ea adipisci hic? Ducimus corporis officiis facere adipisci tempora laborum qui nisi, fuga nemo similique neque perferendis vel quidem quas, accusamus maiores. Ea, illum distinctio quasi ex dignissimos earum est.",
+  "i1": {
+    "title": "",
+    "alt": "",
+    "description": ""
+  },
+  "h3_1": "",
+  "h2_1": "",
+  "h1_1": "",
+  "h4_1": "",
+  "ol1": "",
+  "ul1": "",
+  "ulx_1": "",
+  "olx_1": "",
+
+  
+  "p2": "",
+  "p3": "",
+  "p4": "",
+  "p5": "",
+  "p6": "",
+  "p7": "",
+  "p8": "",
+  "p9": "",
+  "p10": "",
+  "p11": "",
+  "p12": "",
+  "p13": "",
+  "p14": "",
+  "p15": "",
+  "p16": "",
+  "p17": "",
+  "p18": "",
+  "p19": "",
+  "p20": "",
+  "p21": "",
+  "p22": "",
+  "p23": "",
+  "p24": "",
+  "p25": "",
+  "p26": "",
+  "p27": "",
+  "p28": "",
+  "p29": "",
+  "p30": "",
+  "p31": "",
+  "p32": "",
+  "p33": "",
+  "p34": "",
+  "p35": "",
+  "p36": "",
+  "p37": "",
+  "p38": "",
+  "p39": "",
+  "p40": "",
+  "p41": "",
+  "p42": "",
+  "p43": "",
+  "p44": "",
+  "p45": "",
+  "p46": "",
+  "p47": "",
+  "p48": "",
+  "p49": "",
+  "p50": "",
+  "p51": "",
+  "p52": "",
+  "p53": "",
+  "p54": "",
+  "p55": "",
+  "p56": "",
+  "p57": "",
+  "p58": "",
+  "p59": "",
+  "p60": "",
+  "p61": "",
+  "p62": "",
+  "p63": "",
+  "p64": "",
+  "p65": "",
+  "p66": "",
+  "p67": "",
+  "p68": "",
+  "p69": "",
+  "p70": "",
+  "p71": "",
+  "p72": "",
+  "p73": "",
+  "p74": "",
+  "p75": "",
+  "p76": "",
+  "p77": "",
+  "p78": "",
+  "p79": "",
+  "p80": "",
+  "p81": "",
+  "p82": "",
+  "p83": "",
+  "p84": "",
+  "p85": ""
+}
