translating stats section + adding text to home section.

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -5,7 +5,7 @@
         "blog": "المدونة",
         "projects": "المشاريع",
         "cv": "السيرة الذاتية",
-        "githubstats": "حالاتي",
+        "githubstats": "إحصائياتي",
         "cvresume": "السيرة الذاتية"
     },
 
@@ -41,7 +41,7 @@
         "about": "معلومات",
         "me": "عني",
         "job": "مطور واجهة المستخدم",
-        "pcontent": "لوريم ايبسوم دولور سيت أميت، كونسيكتيتور أديبايسينغ إيليت. إيد إفينيت إكسبليكابو سيميليكوي سولوتا إللو نومكوام سوسيبيت فيريتاتيس، كواس لاودانتيوم توتام دولوروم نيسيسيتاتيبوس إن كو إكسيرسيتاسيونيم أولام. فولوبتاتيم كونسيكونتور ديكتا سيد إياوي، سابينتي مايوريس نون فيسيليس فيرو إررور، تيمبوريبوس كويرات، أكيساموس أنيمي كويديم؟ كوبيديتاتيه كوربوريس إكس فيرو.",
+        "pcontent": "بدأت الأمور عندما كنت طفلاً وخضت تجربتي الأولى مع لعبة كمبيوتر. كان 'كريزي تاكسي' أول لعبة لعبتها من أي وقت مضى. ومع مروري بتجارب الألعاب وتصفح الإنترنت، نمت شغفي أيضًا. لقد أحببت كل شيء يتعلق بالكمبيوترات والعالم الافتراضي الذي تم بناؤه بداخلها. ثم انضممت إلى المعهد العالي للهندسة والتكنولوجيا في كفر الشيخ، حيث كتبت أول برنامج C++ لي، الذي أبهرني. ثم درست هياكل البيانات والخوارزميات، وقواعد البيانات، وبرمجة الكائنات، وأجهزة الكمبيوتر، وهندسة الحاسوب والشبكات. وكل هذا جعلني أشعر بالمزيد من الإعجاب بتعلم تفاصيل أكثر عن الكمبيوترات، بما في ذلك الأجهزة والبرمجيات وجميع التقنيات المرتبطة بها. لكنني اخترت هندسة الكمبيوتر لتكون مهنتي لأنها أكثر تعقيدًا وإثارة لدهشتي. مررت بالعديد من مشاريع البرمجيات والأجهزة خلال فترة دراستي في الجامعة وقررت تعلم تطوير الويب ليكون بوابة مهنتي نحو عالم الكمبيوتر. وها أنا، مطور ويب، ومع مرور الأيام، أتعلم المزيد وأستعد للأدوار المتعلقة بالسحابة والشبكات.",
         "button": "اقرأ المزيد"
     },
 
