--- a/src/languages/locale/english/home.json
+++ b/src/languages/locale/english/home.json
@@ -5,7 +5,7 @@
         "blog": "Blog",
         "projects": "Projects",
         "cv": "CV",
-        "githubstats": "My Stats",
+        "githubstats": "Statistics",
         "cvresume": "CV, Resume"
 
     },
@@ -43,7 +43,7 @@
         "about": "About",
         "me": "Me",
         "job": "Frontend Developer",
-        "pcontent": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet explicabo similique soluta illo numquam suscipit veritatis, quas laudantium totam dolorum necessitatibus in quo exercitationem ullam. Voluptatem consequuntur dicta sed eaque, sapiente maiores non facilis vero error, temporibus quaerat, accusamus animi quidem? Cupiditate corporis ex vero.",
+        "pcontent": "It began when I was a child and had my first experience with a computer game. Crazy Taxi was the first game I've ever played. And as I've gone through gaming and surfing the internet, my passion has also grown. I've loved everything about computers and the virtual world built inside of them. Then I joined the Higher Institute of Engineering and Technology in Kafr Elsheikh, then I've written my first C++ programme, which fascinated me. Then I studied Data Structures and Algorithms, Databases, OOP, Computer Hardware, Computer Architecture and Networking. And all of that made me more fascinated to learn more details about computers, including hardware, software and all their related technologies. But I've chosen computer engineering to be my career as it's more complicated and astonishing for me. I've gone through lots of software and hardware projects during my university and decided to learn web development to be the entrance of my career to the World of Computers. And here I am, a web developer and as days pass, I learn more and prepare for a Cloud and Networking role.",
         "button": "Read More"
     },
 
