--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -41,7 +41,7 @@
         "about": "Обо",
         "me": "мне",
         "job": "Фронтенд-разработчик",
-        "pcontent": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet explicabo similique soluta illo numquam suscipit veritatis, quas laudantium totam dolorum necessitatibus in quo exercitationem ullam. Voluptatem consequuntur dicta sed eaque, sapiente maiores non facilis vero error, temporibus quaerat, accusamus animi quidem? Cupiditate corporis ex vero.",
+        "pcontent": "Всё началось, когда я был ребёнком и впервые познакомился с компьютерной игрой. 'Crazy Taxi' была первой игрой, которую я когда-либо играл. И по мере того как я занимался играми и серфингом в интернете, моя страсть также росла. Мне нравилось всё, что связано с компьютерами и виртуальным миром, созданным внутри них. Затем я поступил в Высший институт инженерии и технологии в Кафр-эль-Шейхе, и после этого написал свою первую программу на C++, которая меня очаровала. Затем я изучал структуры данных и алгоритмы, базы данных, объектно-ориентированное программирование, аппаратное обеспечение компьютера, компьютерную архитектуру и сети. И всё это только усилило моё влечение к более подробному изучению компьютеров, включая аппаратное и программное обеспечение и все связанные с этим технологии. Но я выбрал карьеру компьютерного инженера, потому что для меня это более сложно и удивительно. За время университета мне пришлось поработать над множеством программных и аппаратных проектов, и я решил изучить веб-разработку, чтобы начать свою карьеру в мире компьютеров. И вот я, веб-разработчик, и с каждым днем я учусь всему новому и готовлюсь к работе в области облачных технологий и сетей.",
         "button": "Читать далее"
     },
 
