translating projects section

--- a/src/languages/locale/arabic/home.json
+++ b/src/languages/locale/arabic/home.json
@@ -34,6 +34,7 @@
         "email": "البريد الالكتروني",
         "telegram": "تليجرام",
         "phone": "مكالمة هاتفية",
+        "duolingo": "دوولينجو",
         "downloadcv": "تحميل السيرة الذاتية"
     },
 
