--- a/src/languages/locale/arabic/projects.json
+++ b/src/languages/locale/arabic/projects.json
@@ -1,7 +1,7 @@
 {
     "frontend": {
-        "frontend": "Frontend",
-        "projects": "Projects",
+        "frontend": "مشاريع",
+        "projects": "واجهات المواقع",
 
         "project1": {
             "title": "شركة مينت مايند للقهوة",
@@ -13,18 +13,18 @@
         },
 
         "project2": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+            "title": "روبوت متحرك ذكي",
+            "pcontent": "تم تطوير هذا التطبيق بشكل رئيسي باستخدام React لاستضافة جميع المعلومات حول مشروع التخرج الخاص بي ووثائقه. يحتوي هذا الموقع على جميع المعلومات حول مشروع التخرج الخاص بي، وفريقي، وجميع الوثائق المطلوبة لبناء روبوت مماثل خاص بك."
         },
 
         "project3": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+            "title": "تطبيق CV بواسطة React",
+            "pcontent": "لقد أنشأت هذا التطبيق بواسطة React ليعمل كنموذج يمكنني من خلاله إنشاء وطباعة سيرتي الذاتية. ما هو مبدع حقًا في هذا التطبيق هو أنه يمكن طباعته مباشرةً إلى ملف PDF. إنه مرن للغاية وتفاعلي للغاية. على سبيل المثال، يمكنني وضع رابط لعرض شهادة دورة في سيرتي الذاتية أو رابط لشركة عملت فيها. لكن الفكرة الرئيسية هي أنه يمكن تحريره وطباعته بسهولة. حتى يمكن لأي شخص يزور الموقع طباعة سيرتي الذاتية عن طريق الضغط فقط على CTRL + P وفويل."
         },
 
         "project4": {
-            "title": "قريبًا",
-            "pcontent": "نص عشوائي باللغة العربية"
+            "title": "ملفي الشخصي",
+            "pcontent": "هذا التطبيق React حقًا مدهش. إنه مدونة وسيرة ذاتية ومحفظة. مترجم إلى أربع لغات مع رسوم متحركة رائعة في كل مكان وأداء مثلى. لقد قمت بإنشاء هذا الموقع ليس فقط لعرض عملي، ولكن أيضًا لمساعدة الناس من خلال مدونتي حيث أنشر شروحًا حول العديد من المواضيع وأساعد الناس. باستخدام CSS و React و i18next، تحقق هذا المشروع."
         },
 
         "project5": {
@@ -39,8 +39,8 @@
     },
 
     "ciscopackettracer": {
-        "cisco": "Cisco",
-        "packettracer": "Packet Tracer",
+        "cisco": "سيسكو",
+        "packettracer": "باكيت تريسر",
 
         "project1": {
             "title": "الشبكة ١",
