--- a/src/languages/locale/german/home.json
+++ b/src/languages/locale/german/home.json
@@ -34,6 +34,7 @@
 "email": "E-Mail",
 "telegram": "Telegramm",
 "phone": "Telefon",
+"duolingo": "Duolingo",
 "downloadcv": "Lebenslauf herunterladen"
 },
 
