--- a/src/languages/locale/russian/home.json
+++ b/src/languages/locale/russian/home.json
@@ -34,6 +34,7 @@
     "email": "Электронная почта",
     "telegram": "Телеграм",
     "phone": "Телефон",
+    "duolingo": "Дуолинго",
     "downloadcv": "Скачать резюме"
     },
     
